#
#cc_library(
#    name = "clickhouse_lib",
#    srcs = select({
#        "@io_bazel_rules_go//go/platform:linux": ["packaged/lib/linux-amd64/libclickhouse.a"],
#        "@io_bazel_rules_go//go/platform:darwin_arm64": ["packaged/lib/darwin-aarch64/libclickhouse.a"],
#        "//conditions:default": ["UNSUPPORTED_PLATFORM"],
#    }),
#    #    hdrs = glob(["packaged/include/**/*"]),
#    #    includes = ["packaged/include"],
#    #    strip_include_prefix = "packaged/include",
#    visibility = ["//visibility:public"],
#)

cc_library(
    name = "clickhouse-parser",
    hdrs = glob(["include/**/*.h","include/**/*.hpp"]),
    # hdrs = glob(["include/Parsers/**/*.h"]),
    visibility = ["//visibility:public"],
    includes = ["include"],
    linkstatic=True,
    strip_include_prefix = "include",

    srcs = select({
      # ":linux_x86_64": ["lib/linux-amd64/libclickhouse_parsers.a"],
      "@platforms//os:osx": [
            "lib/darwin-aarch64/libclickhouse_parsers.a",
            "lib/darwin-aarch64/libclickhouse_common_access.a",
            "lib/darwin-aarch64/lib_ch_rust_prql.a",
            "lib/darwin-aarch64/lib_ch_rust_skim_rust.a",
            "lib/darwin-aarch64/libLLVMSupport.a",
            "lib/darwin-aarch64/libLLVMDemangle.a",
            "lib/darwin-aarch64/lib_roaring.a",
            "lib/darwin-aarch64/lib_cppkafka.a",
            "lib/darwin-aarch64/lib_rdkafka.a",
            "lib/darwin-aarch64/lib_nats_io.a",
            "lib/darwin-aarch64/lib_sasl2.a",
            "lib/darwin-aarch64/lib_krb5.a",
            "lib/darwin-aarch64/lib_nuraft.a",
            "lib/darwin-aarch64/lib_boost_coroutine.a",
            "lib/darwin-aarch64/libclickhouse_dictionaries_embedded.a",
            "lib/darwin-aarch64/lib_poco_mongodb.a",
            "lib/darwin-aarch64/lib_poco_redis.a",
            "lib/darwin-aarch64/libmysqlxx.a",
            "lib/darwin-aarch64/libclickhouse_common_io.a",
            "lib/darwin-aarch64/libcommon.a",
            "lib/darwin-aarch64/lib_poco_foundation.a",
            "lib/darwin-aarch64/lib_poco_net.a",
            "lib/darwin-aarch64/lib_poco_net_ssl.a",
            "lib/darwin-aarch64/lib_poco_util.a",
            "lib/darwin-aarch64/lib_poco_xml.a",
            "lib/darwin-aarch64/lib_poco_json.a",
            "lib/darwin-aarch64/lib_poco_crypto.a",
            "lib/darwin-aarch64/lib_fmt.a",
            "lib/darwin-aarch64/libabsl_leak_check.a",
            "lib/darwin-aarch64/libabsl_die_if_null.a",
            "lib/darwin-aarch64/libabsl_log_initialize.a",
            "lib/darwin-aarch64/libgrpc.a",
            "lib/darwin-aarch64/lib_re2.a",
            "lib/darwin-aarch64/lib_c-ares.a",
            "lib/darwin-aarch64/libabsl_statusor.a",
            "lib/darwin-aarch64/libupb_json_lib.a",
            "lib/darwin-aarch64/libupb_textformat_lib.a",
            "lib/darwin-aarch64/libupb_collections_lib.a",
            "lib/darwin-aarch64/libupb.a",
            "lib/darwin-aarch64/libutf8_range_lib.a",
            "lib/darwin-aarch64/libgpr.a",
            "lib/darwin-aarch64/libabsl_random_distributions.a",
            "lib/darwin-aarch64/libabsl_random_seed_sequences.a",
            "lib/darwin-aarch64/libabsl_random_internal_pool_urbg.a",
            "lib/darwin-aarch64/libabsl_random_internal_randen.a",
            "lib/darwin-aarch64/libabsl_random_internal_randen_hwaes.a",
            "lib/darwin-aarch64/libabsl_random_internal_randen_hwaes_impl.a",
            "lib/darwin-aarch64/libabsl_random_internal_randen_slow.a",
            "lib/darwin-aarch64/libabsl_random_internal_platform.a",
            "lib/darwin-aarch64/libabsl_random_internal_seed_material.a",
            "lib/darwin-aarch64/libabsl_random_seed_gen_exception.a",
            "lib/darwin-aarch64/libaddress_sorting.a",
            "lib/darwin-aarch64/lib_s2.a",
            "lib/darwin-aarch64/libabsl_log_internal_check_op.a",
            "lib/darwin-aarch64/libabsl_flags_internal.a",
            "lib/darwin-aarch64/libabsl_flags_marshalling.a",
            "lib/darwin-aarch64/libabsl_flags_reflection.a",
            "lib/darwin-aarch64/libabsl_raw_hash_set.a",
            "lib/darwin-aarch64/libabsl_hashtablez_sampler.a",
            "lib/darwin-aarch64/libabsl_flags_config.a",
            "lib/darwin-aarch64/libabsl_flags_program_name.a",
            "lib/darwin-aarch64/libabsl_flags_private_handle_accessor.a",
            "lib/darwin-aarch64/libabsl_flags_commandlineflag.a",
            "lib/darwin-aarch64/libabsl_flags_commandlineflag_internal.a",
            "lib/darwin-aarch64/libabsl_log_internal_conditions.a",
            "lib/darwin-aarch64/libabsl_log_internal_message.a",
            "lib/darwin-aarch64/libabsl_log_internal_nullguard.a",
            "lib/darwin-aarch64/libabsl_examine_stack.a",
            "lib/darwin-aarch64/libabsl_log_internal_format.a",
            "lib/darwin-aarch64/libabsl_log_internal_proto.a",
            "lib/darwin-aarch64/libabsl_log_internal_log_sink_set.a",
            "lib/darwin-aarch64/libabsl_log_globals.a",
            "lib/darwin-aarch64/libabsl_hash.a",
            "lib/darwin-aarch64/libabsl_bad_variant_access.a",
            "lib/darwin-aarch64/libabsl_city.a",
            "lib/darwin-aarch64/libabsl_low_level_hash.a",
            "lib/darwin-aarch64/libabsl_log_internal_globals.a",
            "lib/darwin-aarch64/libabsl_log_sink.a",
            "lib/darwin-aarch64/libabsl_log_entry.a",
            "lib/darwin-aarch64/libabsl_vlog_config_internal.a",
            "lib/darwin-aarch64/libabsl_log_internal_fnmatch.a",
            "lib/darwin-aarch64/libabsl_status.a",
            "lib/darwin-aarch64/libabsl_cord.a",
            "lib/darwin-aarch64/libabsl_bad_optional_access.a",
            "lib/darwin-aarch64/libabsl_cordz_info.a",
            "lib/darwin-aarch64/libabsl_cord_internal.a",
            "lib/darwin-aarch64/libabsl_cordz_functions.a",
            "lib/darwin-aarch64/libabsl_exponential_biased.a",
            "lib/darwin-aarch64/libabsl_cordz_handle.a",
            "lib/darwin-aarch64/libabsl_synchronization.a",
            "lib/darwin-aarch64/libabsl_graphcycles_internal.a",
            "lib/darwin-aarch64/libabsl_kernel_timeout_internal.a",
            "lib/darwin-aarch64/libabsl_stacktrace.a",
            "lib/darwin-aarch64/libabsl_symbolize.a",
            "lib/darwin-aarch64/libabsl_malloc_internal.a",
            "lib/darwin-aarch64/libabsl_debugging_internal.a",
            "lib/darwin-aarch64/libabsl_demangle_internal.a",
            "lib/darwin-aarch64/libabsl_time.a",
            "lib/darwin-aarch64/libabsl_civil_time.a",
            "lib/darwin-aarch64/libabsl_time_zone.a",
            "lib/darwin-aarch64/libabsl_crc_cord_state.a",
            "lib/darwin-aarch64/libabsl_crc32c.a",
            "lib/darwin-aarch64/libabsl_str_format_internal.a",
            "lib/darwin-aarch64/libabsl_strings.a",
            "lib/darwin-aarch64/libabsl_strings_internal.a",
            "lib/darwin-aarch64/libabsl_string_view.a",
            "lib/darwin-aarch64/libabsl_throw_delegate.a",
            "lib/darwin-aarch64/libabsl_int128.a",
            "lib/darwin-aarch64/libabsl_crc_internal.a",
            "lib/darwin-aarch64/libabsl_crc_cpu_detect.a",
            "lib/darwin-aarch64/libabsl_base.a",
            "lib/darwin-aarch64/libabsl_raw_logging_internal.a",
            "lib/darwin-aarch64/libabsl_log_severity.a",
            "lib/darwin-aarch64/libabsl_spinlock_wait.a",
            "lib/darwin-aarch64/libabsl_strerror.a",
            "lib/darwin-aarch64/lib_cctz.a",
            "lib/darwin-aarch64/libtzdata.a"
      ],
    }),
)

cc_binary(
  name = "test",
  srcs = ["test.cc"],
  deps = [":clickhouse-parser"]
)

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)


platform(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:aarch64",
    ],
)
